--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/weather.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/weather.fxml
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
-<?import javafx.collections.FXCollections?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.LineChart?>
-<?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import java.lang.*?>
+<?import javafx.collections.*?>
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="620.0" prefWidth="840.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.WeatherController">
+<AnchorPane prefHeight="620.0" prefWidth="840.0" styleClass="background" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.WeatherController">
    <children>
-      <Button fx:id="saveDataButton" layoutX="826.0" layoutY="30.0" mnemonicParsing="false" styleClass="basicButton" text="Fuck off" />
+
        <AnchorPane fx:id="windPane" layoutX="3.0" layoutY="125.0" prefHeight="548.0" prefWidth="823.0">
            <Label fx:id="windLabel" layoutX="43.0" layoutY="493.0" prefHeight="58.0" prefWidth="138.0" styleClass="valueText" />
            <Button fx:id="windButton" layoutX="329.0" layoutY="437.0" mnemonicParsing="false" onAction="#calculateWindData" styleClass="basicButton" text="CALCULATE" />
@@ -74,6 +69,7 @@
          <Label fx:id="minlabel" layoutX="688.0" layoutY="444.0" prefHeight="17.0" prefWidth="100.0" styleClass="smallText" />
          <Label fx:id="maxlabel" layoutX="688.0" layoutY="470.0" prefHeight="17.0" prefWidth="100.0" styleClass="smallText" />
            <Button fx:id="minMaxTempButton" layoutX="426.0" layoutY="444.0" mnemonicParsing="false" onAction="#onMinMaxBtnClick" styleClass="basicButton" text="MIN-MAX TEMP" />
+           <Button fx:id="saveDataButton" layoutX="145.0" layoutY="520.0" mnemonicParsing="false" onAction="#saveWeatherData" styleClass="basicButton" text="Save Data" />
        </AnchorPane>
        <AnchorPane fx:id="datePickerPane" layoutX="9.0" layoutY="225.0" prefHeight="245.0" prefWidth="191.0">
            <Label fx:id="startDateLabel" layoutX="17.0" styleClass="smallText" text="Select start date" />
