--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/mapview.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/mapview.fxml
@@ -6,46 +6,17 @@
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.ContextMenu?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.Slider?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.ToggleButton?>
-<BorderPane prefHeight="478.0" prefWidth="309.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.MapController">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="501.0" prefWidth="440.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.MapController">
     <top>
-        <HBox fx:id="topControls" alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
-            <children>
-                <Button fx:id="buttonZoom" text="Zoom 14"/>
-                <Slider fx:id="sliderZoom" blockIncrement="1.0" majorTickUnit="7.0" max="28.0" minorTickCount="6" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="14.0" HBox.hgrow="ALWAYS" />
-            </children>
-            <padding>
-                <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
-            </padding>
-        </HBox>
     </top>
     <center>
         <MapView fx:id="mapView" BorderPane.alignment="CENTER"/>
     </center>
-    <bottom>
-        <HBox alignment="CENTER_LEFT" spacing="5.0" BorderPane.alignment="CENTER">
-
-            <children>
-                <Button fx:id="buttonAddPolygon" text="Add"  styleClass="map-button"/>
-                <Button fx:id="buttonClearPolygon" text="Clear"  styleClass="map-button"/>
-                <CheckBox fx:id="checkDrawPolygon" maxWidth="Infinity" text="Draw" />
-            </children>
-            <padding>
-                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-            </padding>
-        </HBox>
-    </bottom>
     <left>
         <Accordion fx:id="leftControls" maxWidth="100" minWidth="100" BorderPane.alignment="CENTER">
             <panes>
@@ -53,13 +24,12 @@
                     <content>
                         <VBox spacing="4">
                             <children>
-                                <Button fx:id="buttonKotka" maxWidth="Infinity" text="Kotka" styleClass="map-button"/>
-                                <Button fx:id="buttonHervanta" maxWidth="Infinity" text="Hervanta" styleClass="map-button"/>
-                                <Button fx:id="buttonLahti" maxWidth="Infinity" text="Lahti" styleClass="map-button"/>
-                                <Button fx:id="buttonSmallRoad" maxWidth="Infinity" text="SmaRoadSegment" styleClass="map-button"/>
-                                <Button fx:id="buttonMediumRoad" maxWidth="Infinity" text="MedRoadSegment" styleClass="map-button"/>
-                                <Button fx:id="buttonLargeRoad" maxWidth="Infinity" text="LargeRoadSegment" styleClass="map-button"/>
-                                <Button fx:id="buttonExtentFinland" maxWidth="Infinity" text="ZoomoutFinland" styleClass="map-button" />
+                                <Button fx:id="buttonKotka" maxWidth="Infinity" styleClass="map-button" text="Kotka" />
+                                <Button fx:id="buttonTampere" maxWidth="Infinity" styleClass="map-button" text="Tampere" />
+                                <Button fx:id="buttonLahti" maxWidth="Infinity" styleClass="map-button" text="Lahti" />
+                                <Button fx:id="buttonSmallRoad" maxWidth="Infinity" styleClass="map-button" text="SmaRoadSegment" />
+                                <Button fx:id="buttonMediumRoad" maxWidth="Infinity" styleClass="map-button" text="MedRoadSegment" />
+                                <Button fx:id="buttonLargeRoad" maxWidth="Infinity" styleClass="map-button" text="LargeRoadSegment" />
                             </children>
                         </VBox>
                     </content>
@@ -79,4 +49,31 @@
             </panes>
         </Accordion>
     </left>
+   <bottom>
+      <HBox prefHeight="33.0" prefWidth="440.0" BorderPane.alignment="CENTER">
+         <children>
+              <HBox fx:id="botControls" alignment="CENTER_LEFT" prefHeight="35.0" prefWidth="310.0" spacing="5.0">
+
+                  <padding>
+                      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                  </padding>
+               <children>
+                     <Button fx:id="buttonAddPolygon" styleClass="map-button" text="Add" />
+                     <Button fx:id="buttonClearPolygon" styleClass="map-button" text="Clear" />
+                     <CheckBox fx:id="checkDrawPolygon" maxWidth="Infinity" text="Draw" />
+               </children>
+              </HBox>
+            <HBox fx:id="zoomControls" alignment="CENTER_RIGHT" nodeOrientation="LEFT_TO_RIGHT" prefHeight="35.0" prefWidth="128.0" spacing="5.0">
+                <padding>
+                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                </padding>
+               <children>
+                  <Button fx:id="buttonZoomOut1" alignment="CENTER_RIGHT" text="In" />
+      
+                     <Button fx:id="buttonZoomOut" alignment="CENTER_RIGHT" text="Out" />
+               </children>
+            </HBox>
+         </children>
+      </HBox>
+   </bottom>
 </BorderPane>
