--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/weather.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/weather.fxml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.collections.*?>
-<?import javafx.scene.chart.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="620.0" prefWidth="840.0" styleClass="background" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.WeatherController">
+<AnchorPane prefHeight="620.0" prefWidth="840.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.WeatherController">
    <children>
 
        <AnchorPane fx:id="windPane" layoutX="3.0" layoutY="125.0" prefHeight="548.0" prefWidth="823.0">
-           <Label fx:id="windLabel" layoutX="43.0" layoutY="493.0" prefHeight="58.0" prefWidth="138.0" styleClass="valueText" />
-           <Button fx:id="windButton" layoutX="329.0" layoutY="437.0" mnemonicParsing="false" onAction="#calculateWindData" styleClass="basicButton" text="CALCULATE" />
            <LineChart fx:id="windChart" layoutX="190.0" layoutY="14.0" prefHeight="400.0" prefWidth="577.0">
                <xAxis>
                    <CategoryAxis side="BOTTOM" fx:id="xAxisWind" />
@@ -20,6 +23,8 @@
                    <NumberAxis fx:id="yAxisWind" side="LEFT" />
                </yAxis>
            </LineChart>
+           <Label fx:id="windLabel" layoutX="43.0" layoutY="493.0" prefHeight="58.0" prefWidth="138.0" styleClass="valueText" />
+           <Button fx:id="windButton" layoutX="329.0" layoutY="437.0" mnemonicParsing="false" onAction="#calculateWindData" styleClass="basicButton" text="CALCULATE" />
        </AnchorPane>
 
        <AnchorPane fx:id="visibilityPane" layoutX="3.0" layoutY="125.0" prefHeight="450.0" prefWidth="823.0">
@@ -34,7 +39,7 @@
                 </yAxis>
             </LineChart>
        </AnchorPane>
-      <Label layoutX="35.0" layoutY="38.0" styleClass="basicTextWhite" text="Choose datatype" />
+      <Label contentDisplay="CENTER" layoutX="34.0" layoutY="33.0" styleClass="bigTextGreen" text="Choose datatype" />
       <ComboBox fx:id="comboBox" layoutX="289.0" layoutY="38.0" onAction="#changeDatatype" prefHeight="35.0" prefWidth="150.0" styleClass="combo-box">
        <items>
            <FXCollections fx:factory="observableArrayList">
@@ -47,29 +52,29 @@
        <Label fx:id="datatypeLabel" contentDisplay="CENTER" layoutX="466.0" layoutY="21.0" prefHeight="70.0" prefWidth="360.0" styleClass="basicHeadingLightBlue" />
 
        <AnchorPane fx:id="temperaturePane" layoutX="3.0" layoutY="62.0" prefHeight="523.0" prefWidth="823.0">
-           <Label fx:id="weatherLabel" layoutX="43.0" layoutY="29.0" styleClass="basicText" text="WEATHER " />
-           <Label fx:id="cityLabel" layoutX="171.0" layoutY="29.0" prefHeight="35.0" prefWidth="139.0" styleClass="basicText" text="City" />
-           <Label fx:id="dateLabel" layoutX="325.0" layoutY="29.0" prefHeight="35.0" prefWidth="498.0" styleClass="basicText" />
-           <Label fx:id="todayLabel" layoutX="54.0" layoutY="74.0" onMouseClicked="#onNowClick" prefHeight="47.0" prefWidth="122.0" styleClass="basicHeading" text="TODAY" />
-           <Label fx:id="tomorrowLabel" layoutX="183.0" layoutY="74.0" onMouseClicked="#onTomorrowClick" prefHeight="47.0" prefWidth="212.0" styleClass="basicHeading" text="TOMORROW" />
-           <Label fx:id="dATomorrowLabel" layoutX="420.0" layoutY="74.0" onMouseClicked="#onDATomorrowClick" prefHeight="47.0" prefWidth="381.0" styleClass="basicHeading" text="DAY AFTER TOMORROW" />
-           <Button fx:id="avgTempButton" layoutX="426.0" layoutY="364.0" mnemonicParsing="false" onAction="#onAvgBtnClick" styleClass="basicButton" text="AVERAGE TEMP" />
+           <Label fx:id="weatherLabel" layoutX="50.0" layoutY="40.0" styleClass="basicText" text="WEATHER" />
+           <Label fx:id="dateLabel" layoutX="212.0" layoutY="40.0" prefHeight="35.0" prefWidth="498.0" styleClass="basicText" />
+           <Label fx:id="todayLabel" layoutX="50.0" layoutY="105.0" onMouseClicked="#onNowClick" prefHeight="47.0" prefWidth="122.0" styleClass="basicHeading" text="TODAY" />
+           <Label fx:id="tomorrowLabel" layoutX="212.0" layoutY="105.0" onMouseClicked="#onTomorrowClick" prefHeight="47.0" prefWidth="212.0" styleClass="basicHeading" text="TOMORROW" />
+           <Label fx:id="dATomorrowLabel" layoutX="464.0" layoutY="105.0" onMouseClicked="#onDATomorrowClick" prefHeight="47.0" prefWidth="381.0" styleClass="basicHeading" text="DAY AFTER TOMORROW" />
 
-           <Label fx:id="nowLabel" layoutX="100.0" layoutY="142.0" prefHeight="47.0" prefWidth="113.0" styleClass="basicHeadingWhite" text="Now" />
-            <Label fx:id="tempRightNowLabel" layoutX="83.0" layoutY="200.0" prefHeight="47.0" prefWidth="139.0" styleClass="basicHeadingWhite" />
-           <Label layoutX="280.0" layoutY="142.0" prefHeight="47.0" prefWidth="139.0" styleClass="basicHeadingWhite" text="Highest" />
-            <Label fx:id="tempMaxLabel" layoutX="280.0" layoutY="200.0" prefHeight="47.0" prefWidth="138.0" styleClass="basicHeadingWhite" />
-           <Label layoutX="467.0" layoutY="142.0" prefHeight="47.0" prefWidth="130.0" styleClass="basicHeadingWhite" text="Lowest" />
-            <Label fx:id="tempMinLabel" layoutX="460.0" layoutY="200.0" prefHeight="47.0" prefWidth="138.0" styleClass="basicHeadingWhite" />
+           <Label fx:id="nowLabel" layoutX="140.0" layoutY="162.0" prefHeight="47.0" prefWidth="113.0" styleClass="basicHeadingWhite" text="Now" />
+           <Label fx:id="tempRightNowLabel" layoutX="140.0" layoutY="209.0" prefHeight="47.0" prefWidth="139.0" styleClass="basicHeadingWhite" />
+           <Label layoutX="320.0" layoutY="162.0" prefHeight="47.0" prefWidth="139.0" styleClass="basicHeadingWhite" text="Highest" />
+           <Label fx:id="tempMaxLabel" layoutX="320.0" layoutY="209.0" prefHeight="47.0" prefWidth="138.0" styleClass="basicHeadingWhite" />
+           <Label layoutX="500.0" layoutY="162.0" prefHeight="47.0" prefWidth="130.0" styleClass="basicHeadingWhite" text="Lowest" />
+           <Label fx:id="tempMinLabel" layoutX="500.0" layoutY="209.0" prefHeight="47.0" prefWidth="138.0" styleClass="basicHeadingWhite" />
+           <Label fx:id="tempErrorLabel" layoutX="140.0" layoutY="256.0" prefHeight="47.0" styleClass="smallText" />
 
-         <Label layoutX="39.0" layoutY="355.0" styleClass="smallHeading" text="Calculate values from given date" />
-         <DatePicker fx:id="chooseDay" layoutX="136.0" layoutY="457.0" onAction="#saveDate" />
-         <Label layoutX="161.0" layoutY="415.0" styleClass="basicTextWhite" text="Select date" />
-         <Label fx:id="avglabel" layoutX="688.0" layoutY="381.0" prefHeight="17.0" prefWidth="113.0" styleClass="smallText" />
-         <Label fx:id="minlabel" layoutX="688.0" layoutY="444.0" prefHeight="17.0" prefWidth="100.0" styleClass="smallText" />
-         <Label fx:id="maxlabel" layoutX="688.0" layoutY="470.0" prefHeight="17.0" prefWidth="100.0" styleClass="smallText" />
-           <Button fx:id="minMaxTempButton" layoutX="426.0" layoutY="444.0" mnemonicParsing="false" onAction="#onMinMaxBtnClick" styleClass="basicButton" text="MIN-MAX TEMP" />
-           <Button fx:id="saveDataButton" layoutX="145.0" layoutY="520.0" mnemonicParsing="false" onAction="#saveWeatherData" styleClass="basicButton" text="Save Data" />
+           <Label layoutX="50.0" layoutY="355.0" styleClass="bigTextGreen" text="Calculate values from given date" />
+           <Label layoutX="141.0" layoutY="405.0" styleClass="basicTextWhite" text="Select date" />
+           <DatePicker fx:id="chooseDay" layoutX="116.0" layoutY="447.0" onAction="#saveDate" />
+           <Button fx:id="avgTempButton" layoutX="366.0" layoutY="410.0" mnemonicParsing="false" onAction="#onAvgBtnClick" styleClass="basicButton" text="AVERAGE TEMP" />
+           <Label fx:id="avgLabel" layoutX="618.0" layoutY="420.0" prefHeight="17.0" prefWidth="113.0" styleClass="smallText" />
+           <Button fx:id="minMaxTempButton" layoutX="366.0" layoutY="477.0" mnemonicParsing="false" onAction="#onMinMaxBtnClick" styleClass="basicButton" text="MIN-MAX TEMP" />
+           <Label fx:id="minLabel" layoutX="618.0" layoutY="477.0" prefHeight="17.0" prefWidth="100.0" styleClass="smallText" />
+           <Label fx:id="maxLabel" layoutX="618.0" layoutY="500.0" prefHeight="17.0" prefWidth="100.0" styleClass="smallText" />
+           <Button fx:id="saveDataButton" layoutX="750.0" layoutY="450.0" mnemonicParsing="false" onAction="#saveWeatherData" styleClass="basicButton" text="Save Data" />
        </AnchorPane>
        <AnchorPane fx:id="datePickerPane" layoutX="9.0" layoutY="225.0" prefHeight="245.0" prefWidth="191.0">
            <Label fx:id="startDateLabel" layoutX="17.0" styleClass="smallText" text="Select start date" />
@@ -77,6 +82,6 @@
            <DatePicker fx:id="startDatePicker" layoutX="17.0" layoutY="30.0" />
            <DatePicker fx:id="endDatePicker" layoutX="17.0" layoutY="200.0" />
        </AnchorPane>
-       <Label fx:id="errorLabel" layoutX="514.0" layoutY="600.0" prefHeight="30.0" prefWidth="500.0" styleClass="smallText" />
+       <Label fx:id="errorLabel" layoutX="406.0" layoutY="600.0" prefHeight="30.0" prefWidth="500.0" styleClass="smallText" />
    </children>
 </AnchorPane>
