--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roaddata.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roaddata.fxml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.collections.FXCollections?>
-<?import java.lang.String?>
-<AnchorPane prefHeight="542.0" prefWidth="1250.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.RoadController">
+<AnchorPane prefHeight="542.0" prefWidth="1250.0" styleClass="background" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.RoadController">
    <children>
       <VBox layoutX="14.0" layoutY="20.0" prefHeight="469.0" prefWidth="333.0" styleClass="backgroundBlue">
          <children>
@@ -41,9 +39,9 @@
       <Label layoutX="1022.0" layoutY="42.0" styleClass="smallHeading" text="LOCATION" />
       <Label layoutX="1022.0" layoutY="167.0" styleClass="smallHeading" text="TIMELINE" />
       <Label layoutX="1027.0" layoutY="214.0" styleClass="smallText" text="Time of day" />
-      <Button layoutX="1046.0" layoutY="460.0" mnemonicParsing="false" styleClass="basicButton" text="CALCULATE" onMouseClicked="#onCalculateClick"/>
+      <Button layoutX="1027.0" layoutY="469.0" mnemonicParsing="false" onMouseClicked="#onCalculateClick" styleClass="basicButton" text="CALCULATE" />
       <Button layoutX="562.0" layoutY="460.0" mnemonicParsing="false" styleClass="basicButton" text="FETCH DATA" />
-       <ComboBox fx:id="timeFrameComboBox" onAction="#changeTimeFrame" layoutX="1175.0" layoutY="209.0" styleClass="combo-box">
+       <ComboBox fx:id="timeFrameComboBox" layoutX="1154.0" layoutY="218.0" onAction="#changeTimeFrame" styleClass="combo-box">
            <items>
                <FXCollections fx:factory="observableArrayList">
                    <String fx:value="CURRENT" />
@@ -62,9 +60,12 @@
           <NumberAxis side="LEFT" />
         </yAxis>
       </LineChart>
-      <DatePicker layoutX="1033.0" layoutY="316.0" />
-      <Label layoutX="1037.0" layoutY="271.0" styleClass="smallText" text="Start date" />
-      <Label layoutX="1036.0" layoutY="354.0" styleClass="smallText" text="End date" />
-      <DatePicker layoutX="1033.0" layoutY="394.0" />
+       <AnchorPane fx:id="datePickerPane" layoutX="1014.0" layoutY="255.0" prefHeight="148.0" prefWidth="191.0">
+           <Label fx:id="startDateLabel" layoutX="17.0" styleClass="smallText" text="Select start date" />
+           <Label fx:id="endDateLabel" layoutX="21.0" layoutY="79.0" styleClass="smallText" text="Select end date" />
+           <DatePicker fx:id="startDatePicker" layoutX="17.0" layoutY="30.0" />
+           <DatePicker fx:id="endDatePicker" layoutX="17.0" layoutY="109.0" />
+       </AnchorPane>
+      <Label fx:id="loadingLabel" layoutX="1049.0" layoutY="431.0" prefHeight="30.0" prefWidth="122.0" styleClass="smallHeading" text="asd" />
    </children>
 </AnchorPane>
