--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/quickview.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/quickview.fxml
@@ -3,23 +3,30 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="620.0" prefWidth="840.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.QuickViewController">
    <children>
-      <Label layoutX="53.0" layoutY="108.0" prefHeight="47.0" prefWidth="435.0" styleClass="basicHeading" text="NOW 2H 4H 6H 12H" />
-      <Label fx:id="weatherLabel" layoutX="53.0" layoutY="39.0" styleClass="basicText" text="WEATHER City Date">
-         <font>
-            <Font size="36.0" />
-         </font>
-      </Label>
-      <Button fx:id="combinePageButton" layoutX="578.0" layoutY="181.0" mnemonicParsing="false" onAction="#loadCombine" styleClass="basicButton" text="COMBINE PAGE" />
-      <Label fx:id="conditionLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="60.0" layoutY="465.0" prefHeight="129.0" prefWidth="189.0" styleClass="valueText" text="BAD" />
-      <Label fx:id="maintenanceLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="366.0" layoutY="465.0" prefHeight="129.0" prefWidth="189.0" styleClass="valueText" text="!Tilhintie &amp; Others" wrapText="true" />
-      <Label fx:id="alertsLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="612.0" layoutY="455.0" prefHeight="129.0" prefWidth="189.0" styleClass="valueText" text="!6" wrapText="true" />
-      <Label layoutX="41.0" layoutY="403.0" styleClass="bigText" text="ROAD CONDITION" />
-      <Label layoutX="335.0" layoutY="403.0" styleClass="bigText" text="MAINTENANCE" />
-      <Label layoutX="641.0" layoutY="403.0" styleClass="bigText" text="ALERTS" />
-      <Label layoutX="41.0" layoutY="358.0" styleClass="smallHeading" text="ROAD DATA" />
+      <Label fx:id="weatherLabel" layoutX="50.0" layoutY="40.0" styleClass="basicText" text="WEATHER" />
+      <Label fx:id="dateLabel" layoutX="212.0" layoutY="40.0" prefHeight="35.0" prefWidth="498.0" styleClass="basicText" />
+      <Label fx:id="todayLabel" layoutX="50.0" layoutY="105.0" onMouseClicked="#onNowClick" prefHeight="47.0" prefWidth="122.0" styleClass="basicHeading" text="TODAY" />
+      <Label fx:id="tomorrowLabel" layoutX="212.0" layoutY="105.0" onMouseClicked="#onTomorrowClick" prefHeight="47.0" prefWidth="212.0" styleClass="basicHeading" text="TOMORROW" />
+      <Label fx:id="dATomorrowLabel" layoutX="464.0" layoutY="105.0" onMouseClicked="#onDATomorrowClick" prefHeight="47.0" prefWidth="381.0" styleClass="basicHeading" text="DAY AFTER TOMORROW" />
+
+      <Label fx:id="nowLabel" layoutX="140.0" layoutY="162.0" prefHeight="47.0" prefWidth="113.0" styleClass="basicHeadingWhite" text="Now" />
+      <Label fx:id="tempRightNowLabel" layoutX="140.0" layoutY="209.0" prefHeight="47.0" prefWidth="139.0" styleClass="basicHeadingWhite" />
+      <Label layoutX="320.0" layoutY="162.0" prefHeight="47.0" prefWidth="139.0" styleClass="basicHeadingWhite" text="Highest" />
+      <Label fx:id="tempMaxLabel" layoutX="320.0" layoutY="209.0" prefHeight="47.0" prefWidth="138.0" styleClass="basicHeadingWhite" />
+      <Label layoutX="500.0" layoutY="162.0" prefHeight="47.0" prefWidth="130.0" styleClass="basicHeadingWhite" text="Lowest" />
+      <Label fx:id="tempMinLabel" layoutX="500.0" layoutY="209.0" prefHeight="47.0" prefWidth="138.0" styleClass="basicHeadingWhite" />
+      <Label fx:id="tempErrorLabel" layoutX="140.0" layoutY="256.0" prefHeight="47.0" styleClass="smallText" />
+
+      <Button fx:id="combinePageButton" layoutX="319.0" layoutY="534.0" mnemonicParsing="false" onAction="#loadCombine" styleClass="basicButton" text="COMBINE PAGE" />
+      <Label fx:id="conditionLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="72.0" layoutY="387.0" prefHeight="129.0" prefWidth="189.0" styleClass="valueText" text="BAD" />
+      <Label fx:id="maintenanceLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="378.0" layoutY="387.0" prefHeight="129.0" prefWidth="189.0" styleClass="valueText" text="!Tilhintie &amp; Others" wrapText="true" />
+      <Label fx:id="alertsLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="624.0" layoutY="377.0" prefHeight="129.0" prefWidth="189.0" styleClass="valueText" text="!6" wrapText="true" />
+      <Label layoutX="53.0" layoutY="325.0" styleClass="bigText" text="ROAD CONDITION" />
+      <Label layoutX="347.0" layoutY="325.0" styleClass="bigText" text="MAINTENANCE" />
+      <Label layoutX="653.0" layoutY="325.0" styleClass="bigText" text="ALERTS" />
+      <Label layoutX="53.0" layoutY="280.0" styleClass="smallHeading" text="ROAD DATA" />
    </children>
 </AnchorPane>
