Wind and visibility linecharts can now be shown at the same time.

--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/stylesheet.css
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/stylesheet.css
@@ -176,8 +176,8 @@
     -fx-background-color: #78e2a2;
 }
 
-.basicButton:selected:focused {
-    -fx-background-color: black;
+.basicButtonGreen {
+    -fx-background-color: #78e2a2;
 }
 
 .combo-box {
