--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roaddata.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roaddata.fxml
@@ -2,9 +2,7 @@
 
 <?import java.lang.String?>
 <?import javafx.collections.FXCollections?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.LineChart?>
-<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
@@ -16,14 +14,6 @@
    <children>
       <Label fx:id="infoLabel" alignment="CENTER" layoutX="347.0" layoutY="14.0" prefHeight="35.0" prefWidth="446.0" styleClass="smallHeading" />
       <Label fx:id="alertsLabel" alignment="CENTER" layoutX="752.0" layoutY="544.0" prefHeight="35.0" prefWidth="152.0" styleClass="smallHeading" text="X ALERTS" />
-      <LineChart layoutX="20.0" layoutY="19.0" prefHeight="496.0" prefWidth="672.0">
-        <xAxis>
-          <CategoryAxis side="BOTTOM" />
-        </xAxis>
-        <yAxis>
-          <NumberAxis side="LEFT" />
-        </yAxis>
-      </LineChart>
       <AnchorPane fx:id="datePickerPane" layoutX="696.0" layoutY="217.0" prefHeight="309.0" prefWidth="240.0" style="-fx-border-color: blue; -fx-border-width: 3;">
          <children>
             <Label layoutX="32.0" styleClass="smallHeading" text="MAINTENANCE" />
@@ -78,5 +68,7 @@
             <Label layoutX="9.0" layoutY="44.0" styleClass="smallText" text="Type" />
          </children>
       </AnchorPane>
+      <PieChart fx:id="conditionChart" labelLineLength="0.0" labelsVisible="false" layoutX="347.0" layoutY="6.0" prefHeight="309.0" prefWidth="323.0" title="ConditionChart" />
+      <PieChart fx:id="maintenanceChart" labelLineLength="0.0" labelsVisible="false" layoutX="45.0" layoutY="6.0" prefHeight="309.0" prefWidth="323.0" title="MaintenanceChart" />
    </children>
 </AnchorPane>
