--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roaddata.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/roaddata.fxml
@@ -35,7 +35,7 @@
             <Button fx:id="applyMaintenanceButton" layoutX="67.0" layoutY="234.0" mnemonicParsing="false" onMouseClicked="#onApplyMaintenanceClick" styleClass="basicButton" text="APPLY" />
          </children>
       </AnchorPane>
-      <Button layoutX="290.0" layoutY="501.0" mnemonicParsing="false" onMouseClicked="#onUpdateClick" styleClass="basicButton" text=" UPDATE" />
+      <Button layoutX="291.0" layoutY="519.0" mnemonicParsing="false" onMouseClicked="#onUpdateClick" styleClass="basicButton" text=" UPDATE" />
       <AnchorPane layoutX="696.0" layoutY="49.0" prefHeight="128.0" prefWidth="240.0" style="-fx-border-color: blue; -fx-border-width: 3;">
          <children>
             <Label layoutX="9.0" layoutY="85.0" styleClass="smallText" text="Time of day" />
@@ -68,7 +68,7 @@
             <Label layoutX="9.0" layoutY="44.0" styleClass="smallText" text="Type" />
          </children>
       </AnchorPane>
-      <PieChart fx:id="conditionChart" labelLineLength="0.0" labelsVisible="false" layoutX="347.0" layoutY="6.0" prefHeight="309.0" prefWidth="323.0" title="ConditionChart" />
-      <PieChart fx:id="maintenanceChart" labelLineLength="0.0" labelsVisible="false" layoutX="45.0" layoutY="6.0" prefHeight="309.0" prefWidth="323.0" title="MaintenanceChart" />
+      <PieChart fx:id="conditionChart" labelLineLength="0.0" labelsVisible="false" layoutX="371.0" layoutY="6.0" maxHeight="500.0" maxWidth="325.0" minHeight="500.0" minWidth="325.0" prefHeight="500.0" prefWidth="325.0" title="ConditionChart" />
+      <PieChart fx:id="maintenanceChart" labelLineLength="0.0" labelsVisible="false" layoutX="3.0" layoutY="6.0" maxHeight="500.0" maxWidth="360.0" minHeight="500.0" minWidth="360.0" prefHeight="500.0" prefWidth="360.0" title="MaintenanceChart" />
    </children>
 </AnchorPane>
