--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/preferences.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/preferences.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
@@ -7,9 +11,25 @@
    <children>
       <Label layoutX="58.0" layoutY="50.0" styleClass="smallHeading" text="LOCATION" />
       <Label layoutX="58.0" layoutY="140.0" styleClass="smallHeading" text="WEATHER DATA" />
+      <ComboBox fx:id="weatherComboBox" layoutX="284.0" layoutY="140.0" onAction="#changeWeatherType" prefHeight="35.0" prefWidth="150.0" styleClass="combo-box">
+         <items>
+            <FXCollections fx:factory="observableArrayList">
+               <String fx:id="temperatureItem" fx:value="TEMPERATURE" />
+               <String fx:id="chartItem" fx:value="CHARTS" />
+            </FXCollections>
+         </items>
+      </ComboBox>
       <Label layoutX="58.0" layoutY="222.0" styleClass="smallHeading" text="ROAD DATA" />
-      <Label layoutX="303.0" layoutY="50.0" styleClass="basicTextWhite" text="Kotka" />
-      <Label layoutX="303.0" layoutY="140.0" styleClass="basicTextWhite" text="Temperature" />
-      <Label layoutX="303.0" layoutY="222.0" styleClass="basicTextWhite" text="Friction" />
+      <ComboBox fx:id="conditionTypeComboBox" layoutX="284.0" layoutY="222.0" maxWidth="150.0" onAction="#changeConditionType" prefHeight="35.0" prefWidth="150.0" styleClass="combo-box">
+         <items>
+            <FXCollections fx:factory="observableArrayList">
+               <String fx:value="OVERALL" />
+               <String fx:value="FRICTION" />
+               <String fx:value="SLIPPERINESS" />
+               <String fx:value="PRECIPICATION" />
+            </FXCollections>
+         </items>
+      </ComboBox>
+      <Button layoutX="134.0" layoutY="448.0" mnemonicParsing="false" styleClass="basicButton" text="Save preferences" />
    </children>
 </AnchorPane>
